# Quantflow-Financial-Suite

./: .gitignore  .gitkeep  README.md  __init__.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_dcf.py  test_full_analysis.py
config/: assumptions.yaml
quantflow/: __init__.py  config.py
quantflow/analyzers/: __init__.py  comps.py
quantflow/fetchers/: __init__.py  __main__.py  balance.py  cashflow.py  income.py  market.py
quantflow/models/: __init__.py  dcf_calculator.py
quantflow/utils/: __init__.py  io_utils.py
templates/: Adobe_DCF_Model.xlsx
